--- a/SurveyApp/SurveyApp/src/survey/view/customcell/SurveyCollectionViewCell.xib
+++ b/SurveyApp/SurveyApp/src/survey/view/customcell/SurveyCollectionViewCell.xib
@@ -56,6 +56,9 @@
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="arrowBtnAction:" destination="gTV-IL-0wX" eventType="touchUpInside" id="w4d-aQ-Mf2"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <userDefinedRuntimeAttributes>
