--- a/SurveyApp/SurveyApp/src/storyboard/Base.lproj/SurveyAppMain.storyboard
+++ b/SurveyApp/SurveyApp/src/storyboard/Base.lproj/SurveyAppMain.storyboard
@@ -101,10 +101,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gem-No-3qq">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ac5-8n-Rlw">
-                                <rect key="frame" x="8" y="640" width="398" height="214"/>
+                                <rect key="frame" x="20" y="674" width="374" height="180"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="214" id="vay-lp-MLz"/>
+                                    <constraint firstAttribute="height" constant="180" id="vay-lp-MLz"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="01c-oc-jF1">
                                     <size key="itemSize" width="128" height="128"/>
@@ -118,7 +121,10 @@
                                 </userDefinedRuntimeAttributes>
                             </collectionView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="rJp-id-Z8e">
-                                <rect key="frame" x="-48" y="606" width="156" height="26"/>
+                                <rect key="frame" x="-48" y="658" width="156" height="16"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="16" id="xBK-jo-KCJ"/>
+                                </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
                                 </userDefinedRuntimeAttributes>
@@ -127,14 +133,19 @@
                         <viewLayoutGuide key="safeArea" id="L5J-eG-VFf"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="ac5-8n-Rlw" firstAttribute="top" secondItem="rJp-id-Z8e" secondAttribute="bottom" constant="8" id="3MH-0H-5g3"/>
-                            <constraint firstItem="ac5-8n-Rlw" firstAttribute="leading" secondItem="L5J-eG-VFf" secondAttribute="leading" constant="8" id="Isy-9p-7cG"/>
+                            <constraint firstItem="ac5-8n-Rlw" firstAttribute="top" secondItem="rJp-id-Z8e" secondAttribute="bottom" id="3MH-0H-5g3"/>
+                            <constraint firstItem="gem-No-3qq" firstAttribute="leading" secondItem="L5J-eG-VFf" secondAttribute="leading" id="8sf-KE-OVb"/>
+                            <constraint firstItem="ac5-8n-Rlw" firstAttribute="leading" secondItem="L5J-eG-VFf" secondAttribute="leading" constant="20" id="Isy-9p-7cG"/>
+                            <constraint firstItem="gem-No-3qq" firstAttribute="top" secondItem="3jG-A9-HIM" secondAttribute="top" id="WOX-XL-XCo"/>
+                            <constraint firstAttribute="bottom" secondItem="gem-No-3qq" secondAttribute="bottom" id="grG-ZU-d8R"/>
                             <constraint firstItem="L5J-eG-VFf" firstAttribute="bottom" secondItem="ac5-8n-Rlw" secondAttribute="bottom" constant="8" id="mtz-EG-0IM"/>
                             <constraint firstItem="rJp-id-Z8e" firstAttribute="leading" secondItem="L5J-eG-VFf" secondAttribute="leading" constant="-48" id="qLw-BI-oiU"/>
-                            <constraint firstItem="L5J-eG-VFf" firstAttribute="trailing" secondItem="ac5-8n-Rlw" secondAttribute="trailing" constant="8" id="taE-UA-ebH"/>
+                            <constraint firstItem="L5J-eG-VFf" firstAttribute="trailing" secondItem="ac5-8n-Rlw" secondAttribute="trailing" constant="20" id="taE-UA-ebH"/>
+                            <constraint firstItem="L5J-eG-VFf" firstAttribute="trailing" secondItem="gem-No-3qq" secondAttribute="trailing" id="xRw-4b-oOn"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="backgroundImageView" destination="gem-No-3qq" id="abl-3E-x28"/>
                         <outlet property="collectionVIewTop" destination="3MH-0H-5g3" id="qS8-pP-cyx"/>
                         <outlet property="collectionView" destination="ac5-8n-Rlw" id="MPZ-KQ-K41"/>
                         <outlet property="collectionViewBottom" destination="mtz-EG-0IM" id="lEL-mK-1Nr"/>
@@ -147,7 +158,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wi8-XD-jO6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1006" y="80"/>
+            <point key="canvasLocation" x="1005.7971014492755" y="79.6875"/>
         </scene>
         <!--Survey Details View-->
         <scene sceneID="Z12-te-MzH">
