--- a/SurveyApp/SurveyApp/src/survey/view/customcell/SurveyCollectionViewCell.xib
+++ b/SurveyApp/SurveyApp/src/survey/view/customcell/SurveyCollectionViewCell.xib
@@ -17,8 +17,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="357" height="173"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="3uN-8z-2PY" userLabel="outerStackView">
-                        <rect key="frame" x="0.0" y="0.0" width="357" height="105.5"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="3uN-8z-2PY" userLabel="outerStackView">
+                        <rect key="frame" x="0.0" y="29.5" width="357" height="89.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EIx-Ij-gLH">
                                 <rect key="frame" x="0.0" y="0.0" width="357" height="33.5"/>
@@ -30,7 +30,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="fDx-0H-faw">
-                                <rect key="frame" x="0.0" y="49.5" width="357" height="56"/>
+                                <rect key="frame" x="0.0" y="33.5" width="357" height="56"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description jhbjhkb jhbjhb hjbjh  jhbjhb jhbjhb" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X4C-eP-UbA">
                                         <rect key="frame" x="0.0" y="0.0" width="281" height="56"/>
@@ -76,7 +76,7 @@
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="3uN-8z-2PY" secondAttribute="trailing" id="RKj-ei-aiS"/>
                 <constraint firstItem="3uN-8z-2PY" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="f9j-si-wJi"/>
-                <constraint firstItem="3uN-8z-2PY" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="zAq-7W-bAi"/>
+                <constraint firstAttribute="bottom" secondItem="3uN-8z-2PY" secondAttribute="bottom" constant="54" id="zAq-7W-bAi"/>
             </constraints>
             <size key="customSize" width="357" height="173"/>
             <userDefinedRuntimeAttributes>
