--- a/SurveyApp/SurveyApp/src/storyboard/Base.lproj/SurveyAppMain.storyboard
+++ b/SurveyApp/SurveyApp/src/storyboard/Base.lproj/SurveyAppMain.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -121,18 +122,30 @@
                                 </userDefinedRuntimeAttributes>
                             </collectionView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="rJp-id-Z8e">
-                                <rect key="frame" x="-48" y="658" width="156" height="16"/>
+                                <rect key="frame" x="-48" y="660" width="156" height="14"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="16" id="xBK-jo-KCJ"/>
+                                    <constraint firstAttribute="height" constant="14" id="xBK-jo-KCJ"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </pageControl>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Scg-pT-sDc">
+                                <rect key="frame" x="16" y="652" width="40" height="14"/>
+                                <color key="backgroundColor" systemColor="linkColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="3ED-JA-Rgd"/>
+                                    <constraint firstAttribute="height" constant="14" id="5oQ-4y-zBQ"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="L5J-eG-VFf"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="ac5-8n-Rlw" firstAttribute="top" secondItem="Scg-pT-sDc" secondAttribute="bottom" constant="8" id="2wd-d7-zvL"/>
                             <constraint firstItem="ac5-8n-Rlw" firstAttribute="top" secondItem="rJp-id-Z8e" secondAttribute="bottom" id="3MH-0H-5g3"/>
                             <constraint firstItem="gem-No-3qq" firstAttribute="leading" secondItem="L5J-eG-VFf" secondAttribute="leading" id="8sf-KE-OVb"/>
                             <constraint firstItem="ac5-8n-Rlw" firstAttribute="leading" secondItem="L5J-eG-VFf" secondAttribute="leading" constant="20" id="Isy-9p-7cG"/>
@@ -142,6 +155,7 @@
                             <constraint firstItem="rJp-id-Z8e" firstAttribute="leading" secondItem="L5J-eG-VFf" secondAttribute="leading" constant="-48" id="qLw-BI-oiU"/>
                             <constraint firstItem="L5J-eG-VFf" firstAttribute="trailing" secondItem="ac5-8n-Rlw" secondAttribute="trailing" constant="20" id="taE-UA-ebH"/>
                             <constraint firstItem="L5J-eG-VFf" firstAttribute="trailing" secondItem="gem-No-3qq" secondAttribute="trailing" id="xRw-4b-oOn"/>
+                            <constraint firstItem="Scg-pT-sDc" firstAttribute="leading" secondItem="L5J-eG-VFf" secondAttribute="leading" constant="16" id="ymc-GP-wUv"/>
                         </constraints>
                     </view>
                     <connections>
@@ -154,6 +168,7 @@
                         <outlet property="collectionViewTrailing" destination="taE-UA-ebH" id="xNf-La-AUT"/>
                         <outlet property="pageControl" destination="rJp-id-Z8e" id="gf9-dI-JHW"/>
                         <outlet property="pageControlLeading" destination="qLw-BI-oiU" id="NPM-Nl-cgd"/>
+                        <outlet property="skeletonViewForPageController" destination="Scg-pT-sDc" id="K6q-fE-pCt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wi8-XD-jO6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -194,5 +209,8 @@
     </scenes>
     <resources>
         <image name="homeLogo" width="202" height="48"/>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
