--- a/SurveyApp/SurveyApp/src/survey/view/customcell/SurveyCollectionViewCell.xib
+++ b/SurveyApp/SurveyApp/src/survey/view/customcell/SurveyCollectionViewCell.xib
@@ -11,17 +11,24 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" reuseIdentifier="surveyCollectionViewCellId" id="gTV-IL-0wX" customClass="SurveyCollectionViewCell" customModule="SurveyApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="357" height="173"/>
+            <rect key="frame" x="0.0" y="0.0" width="420" height="789"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="357" height="173"/>
+                <rect key="frame" x="0.0" y="0.0" width="420" height="789"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="q3p-J8-ArG" userLabel="cellBackgroundImage">
+                        <rect key="frame" x="0.0" y="0.0" width="420" height="789"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </imageView>
+                    <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Overlay" translatesAutoresizingMaskIntoConstraints="NO" id="38E-2c-Pvi" userLabel="cellOverLayImage">
+                        <rect key="frame" x="0.0" y="0.0" width="420" height="789"/>
+                    </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="3uN-8z-2PY" userLabel="outerStackView">
-                        <rect key="frame" x="8" y="29.5" width="341" height="89.5"/>
+                        <rect key="frame" x="16" y="645.5" width="388" height="89.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EIx-Ij-gLH">
-                                <rect key="frame" x="0.0" y="0.0" width="341" height="33.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="388" height="33.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -30,10 +37,10 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="fDx-0H-faw">
-                                <rect key="frame" x="0.0" y="33.5" width="341" height="56"/>
+                                <rect key="frame" x="0.0" y="33.5" width="388" height="56"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description jhbjhkb jhbjhb hjbjh  jhbjhb jhbjhb" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X4C-eP-UbA">
-                                        <rect key="frame" x="0.0" y="0.0" width="265" height="56"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="312" height="56"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -42,7 +49,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bLv-vl-tTQ">
-                                        <rect key="frame" x="285" y="0.0" width="56" height="56"/>
+                                        <rect key="frame" x="332" y="0.0" width="56" height="56"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="56" id="8tD-hd-3VL"/>
@@ -74,11 +81,19 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="3uN-8z-2PY" secondAttribute="trailing" constant="8" id="RKj-ei-aiS"/>
-                <constraint firstItem="3uN-8z-2PY" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="f9j-si-wJi"/>
+                <constraint firstAttribute="trailing" secondItem="38E-2c-Pvi" secondAttribute="trailing" id="0Nq-rv-MH9"/>
+                <constraint firstItem="38E-2c-Pvi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="4h8-JH-jQW"/>
+                <constraint firstItem="q3p-J8-ArG" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="8bK-eo-TYn"/>
+                <constraint firstAttribute="trailing" secondItem="3uN-8z-2PY" secondAttribute="trailing" constant="16" id="RKj-ei-aiS"/>
+                <constraint firstItem="38E-2c-Pvi" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Rlu-pJ-7ba"/>
+                <constraint firstItem="q3p-J8-ArG" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="RxE-N4-cH6"/>
+                <constraint firstAttribute="bottom" secondItem="q3p-J8-ArG" secondAttribute="bottom" id="XWc-Lt-qdw"/>
+                <constraint firstItem="3uN-8z-2PY" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="f9j-si-wJi"/>
+                <constraint firstAttribute="bottom" secondItem="38E-2c-Pvi" secondAttribute="bottom" id="phR-zw-k4z"/>
+                <constraint firstAttribute="trailing" secondItem="q3p-J8-ArG" secondAttribute="trailing" id="xk1-Sr-c57"/>
                 <constraint firstAttribute="bottom" secondItem="3uN-8z-2PY" secondAttribute="bottom" constant="54" id="zAq-7W-bAi"/>
             </constraints>
-            <size key="customSize" width="357" height="173"/>
+            <size key="customSize" width="420" height="789"/>
             <userDefinedRuntimeAttributes>
                 <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
             </userDefinedRuntimeAttributes>
@@ -86,10 +101,14 @@
                 <outlet property="arrowButton" destination="bLv-vl-tTQ" id="K58-PU-gKW"/>
                 <outlet property="arrowButtonHeight" destination="Ygd-Yr-nWF" id="p1K-lz-9zw"/>
                 <outlet property="arrowButtonWidth" destination="8tD-hd-3VL" id="ua0-aM-G4u"/>
+                <outlet property="cellBackgroundImage" destination="q3p-J8-ArG" id="AyN-EL-T0D"/>
                 <outlet property="descriptionLabel" destination="X4C-eP-UbA" id="9Fv-nV-UwP"/>
                 <outlet property="titleLabel" destination="EIx-Ij-gLH" id="o09-iX-Eqs"/>
             </connections>
-            <point key="canvasLocation" x="-70.28985507246378" y="14.397321428571427"/>
+            <point key="canvasLocation" x="101.44927536231884" y="220.64732142857142"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="Overlay" width="125" height="270.66665649414062"/>
+    </resources>
 </document>
